fix(verticalNav): scrollbar spacing

--- a/css/src/components/collapsible.css
+++ b/css/src/components/collapsible.css
@@ -11,7 +11,7 @@
   display: inline-flex;
   flex-direction: column;
   background-color: var(--secondary-lightest);
-  width: 40px;
+  width: var(--spacing-4);
   height: 100%;
   transition: width 240ms;
   transition-timing-function: cubic-bezier(0.4, 0.14, 0.3, 1);
@@ -24,6 +24,11 @@
 .Collapsible-body {
   flex-grow: 1;
   overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.Collapsible-body--hoverable {
+  overflow-y: hidden;
 }
 
 .Collapsible-footer {
