--- a/css/src/components/verticalNav.css
+++ b/css/src/components/verticalNav.css
@@ -4,7 +4,7 @@
 }
 
 .VerticalNav--expanded {
-  width: var(--spacing-9);
+  width: 240px;
 }
 
 .VerticalNav-section {
@@ -26,7 +26,7 @@
   align-items: center;
   cursor: pointer;
   transition: var(--duration--fast-01) var(--standard-productive-curve);
-  width: var(--spacing-9);
+  width: 232px;
 }
 
 .MenuItem--horizontal {
@@ -45,8 +45,8 @@
 .MenuItem--collapsed {
   height: 28px;
   width: 28px;
-  margin-left: 6px;
-  margin-right: 6px;
+  margin-left: 10px;
+  margin-right: 10px;
   justify-content: center;
   border-radius: 50%;
   cursor: pointer;
